# zeno

./: .gitignore  .mcp.json  LICENSE  README.md
.github/: copilot-instructions.md
.github/workflows/: copilot-setup-steps.yml
docs/: ARCHITECTURE.md  EXPECTATIONS.md  ISSUES.md  MEMORY.md  PARTIALITY.md  SWARM.md  TRAINING.md
proto/: .gitignore  Cargo.toml
proto/src/: addrnet.rs  attention.rs  confidence.rs  config.rs  data.rs  heads.rs  lib.rs  main.rs  model.rs  train.rs  trie.rs  visualizer.rs  visualizer_tui.rs
