[package]
name = "zeno-proto"
version = "0.1.0"
edition = "2021"
description = "Zeno Prototype 1 — Core Agent + Trie Memory PoC"

[dependencies]
candle-core = "0.8"
candle-nn = "0.8"
rand = "0.8"
anyhow = "1"
ctrlc = "3"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda"]
metal = ["candle-core/metal", "candle-nn/metal"]
accelerate = ["candle-core/accelerate", "candle-nn/accelerate"]
